--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -3,7 +3,7 @@ title: May 3rd, 2021
 ---
 
 ## Talk with dad
-### Children remind of myself
+### Children remind me of myself
 ### This work is what I need to do
 ### What I want to do is watch YouTube and giggle stupidly
 #### That's what you're referring to?
