--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -5,6 +5,7 @@ title: May 3rd, 2021
 ## Talk with dad
 ### Children remind me of myself
 ### This work is what I need to do
+#### It keeps me from falling
 ### What I want to do is watch YouTube and giggle stupidly
 #### That's what you're referring to?
 ###
