--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -6,6 +6,7 @@ title: May 3rd, 2021
 ### Children remind me of myself
 ### This work is what I need to do
 #### It keeps me from falling to bad habits
+#### Like watching youtube while giggling
 ####
 ### What I want to do is watch YouTube and giggle stupidly
 #### That's what you're referring to?
