Logseq auto save

--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -7,5 +7,6 @@ title: May 3rd, 2021
 ### This work is what I need to do
 #### It keeps me from falling to bad habits
 #### Like watching youtube while giggling
+#### I am angry because I feel you don't
 ###
 ##
