Logseq auto save

--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -8,5 +8,7 @@ title: May 3rd, 2021
 #### It keeps me from falling to bad habits
 #### Like watching youtube while giggling
 #### I am angry because I feel you want to subotage my work for your own gain
-###
+### Let me have 3 hour of work
+#### Send proposals
+####
 ##
