Logseq auto save

--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -10,5 +10,6 @@ title: May 3rd, 2021
 #### I am angry because I feel you want to subotage my work for your own gain
 ### Let me have 3 hour of work
 #### Send proposals
+#### Learn code
 ####
 ##
