--- a/journals/2021_05_03.md
+++ b/journals/2021_05_03.md
@@ -8,8 +8,8 @@ title: May 3rd, 2021
 #### It keeps me from falling to bad habits
 #### Like watching youtube while giggling
 #### I am angry because I feel you want to subotage my work for your own gain
-### Let me have 3 hour of work
+### Let me have 4 hour of work
 #### Send proposals
 #### Learn code
-####
+#### Design posts
 ##
