Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -6,4 +6,6 @@ title: May 4th, 2021
 ### Open vscodium
 ### Open inline terminal
 ### Start Flutter emulator
+### open firefox in another workspace
+### Open udemy flutter bootcamp
 ###
