Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -8,4 +8,4 @@ title: May 4th, 2021
 ### Start Flutter emulator
 ### open firefox in another workspace
 ### Open udemy flutter bootcamp
-###
+### Navigatebto
