Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -9,4 +9,5 @@ title: May 4th, 2021
 ### open firefox in another workspace
 ### Open udemy flutter bootcamp
 ### Navigate to {next.lesson}
-### Open
+### Open as pictire in picture
+### Move that floating window to
