Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -6,8 +6,9 @@ title: May 4th, 2021
 ### Open vscodium
 ### Open inline terminal
 ### Start Flutter emulator
-### open firefox in another workspace
+###
+### open firefox
 ### Open udemy flutter bootcamp
 ### Navigate to {next.lesson}
 ### Open as pictire in picture
-### Move that floating window to
+### Move that floating window to vscodium workspace
