Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -6,7 +6,7 @@ title: May 4th, 2021
 ### Open vscodium
 ### Open inline terminal
 ### Start Flutter emulator
-###
+### shortcut to next workspace
 ### open firefox
 ### Open udemy flutter bootcamp
 ### Navigate to {next.lesson}
