Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -2,13 +2,14 @@
 title: May 4th, 2021
 ---
 
-## Micard atomic steps
-### Open vscodium
-### Open inline terminal
-### Start Flutter emulator
-### shortcut to next workspace
-### open firefox
-### Open udemy flutter bootcamp
-### Navigate to {next.lesson}
-### Open as pictire in picture
-### Move that floating window to vscodium workspace
+## Brraling down my tasks
+### Micard atomic steps
+#### Open vscodium
+#### Open inline terminal
+#### Start Flutter emulator
+#### shortcut to next workspace
+#### open firefox
+#### Open udemy flutter bootcamp
+#### Navigate to {next.lesson}
+#### Open lesson as pictire in picture
+#### Move that floating window to vscodium workspace
