Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -1,8 +1,7 @@
 ---
 title: May 4th, 2021
 ---
-
-## Brraling down my tasks
+Brraling down my tasks
 ### Micard atomic steps
 #### Open vscodium
 #### Open inline terminal
