Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -13,5 +13,6 @@ title: May 4th, 2021
 #### Open lesson as pictire in picture
 ###
 #### Move that floating window to vscodium workspace
-###
+### Last 10 nights of ramadan
+####
 ##
