Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -14,5 +14,9 @@ title: May 4th, 2021
 ###
 #### Move that floating window to vscodium workspace
 ### Last 10 nights of ramadan
-####
+#### Isha'a
+##### Do Wudu
+#####
+##### Put on clothes [jeans, sweatshirt]
+#####
 ##
