Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -16,7 +16,7 @@ title: May 4th, 2021
 ### Last 10 nights of ramadan
 #### Isha'a
 ##### Do Wudu
-#####
+##### Put on Masah
 ##### Put on clothes [jeans, sweatshirt]
 #####
 ##
