Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -17,6 +17,7 @@ title: May 4th, 2021
 #### Isha'a
 ##### Do Wudu
 ##### Put on Masah
-##### Put on clothes [jeans, sweatshirt]
+##### Put on jeans, sweatshirt
+#####
 #####
 ##
