Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -18,6 +18,6 @@ title: May 4th, 2021
 ##### Do Wudu
 ##### Put on Masah
 ##### Put on jeans, sweatshirt
-#####
-#####
+##### Go out
+##### Buy ice-cream on the way
 ##
