Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -20,6 +20,7 @@ title: May 4th, 2021
 ##### Put on jeans, sweatshirt
 ##### Go out
 ##### Buy ice-cream on the way
-#### Tashahhud, wake up 3:00 am
+#### Tashahhud
+##### wake up 3:00 am
 #####
 ##
