Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -22,5 +22,7 @@ title: May 4th, 2021
 ##### Buy ice-cream on the way
 #### Tashahhud
 ##### wake up 3:20 am
+##### Quick Salah
+##### Suhoor
 #####
 ##
