Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -13,7 +13,7 @@ title: May 4th, 2021
 #### Open lesson as pictire in picture
 ###
 #### Move that floating window to vscodium workspace
-### Last 10 nights of ramadan
+### Ramdan Night Atomic Steps
 #### Isha'a
 ##### Do Wudu
 ##### Put on Masah
@@ -22,6 +22,7 @@ title: May 4th, 2021
 ##### Buy ice-cream on the way
 #### Tashahhud
 ##### wake up 3:20 am
+##### take Wudu even if cold
 ##### Quick Salah
 ##### Suhoor
 ##### Reminder
