Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -29,5 +29,5 @@ title: May 4th, 2021
 ### Atomic tasks when making Insta posts
 #### a
 ## #capture | Taking code notes
-###
+### It's better to
 #
