Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -30,5 +30,6 @@ title: May 4th, 2021
 #### a
 ## #capture | Taking code notes
 ### It's better to
-### /dra
+### [[draws/2021-05-04-18-48-31.excalidraw]]
+###
 #
