--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -29,5 +29,7 @@ title: May 4th, 2021
 ### Atomic tasks when making Insta posts
 #### a
 ## #capture | Taking code notes
-### It's better to
+### It's better to make a simple project on one lesson at a time
+### A notebook or repo on github
+### That's why I'll introduce
 #
