Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -31,5 +31,5 @@ title: May 4th, 2021
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
-### That's why I'll introduce
+### That's why I'll make a personal projects that implement the lesson from every module
 #
