Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -27,7 +27,9 @@ title: May 4th, 2021
 ##### Suhoor
 ##### Reminder
 ### Atomic tasks when making Insta posts
-#### a
+#### Research content ideas
+#### Write basic idea behind it
+#### write
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
