Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -29,7 +29,7 @@ title: May 4th, 2021
 ### Atomic tasks when making Insta posts
 #### Research content ideas
 #### Write basic idea behind it
-#### write
+#### Write
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
