Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -32,6 +32,7 @@ title: May 4th, 2021
 #### Write a story from it
 #### break into caption and slides
 #### Write the slide caption
+#### Make mockup carousel
 ####
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
