Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -33,7 +33,10 @@ title: May 4th, 2021
 #### break into caption and slides
 #### Write the slide caption
 #### Make mockup carousel
+#### Acquire all design assets
+#### Polish the carousel
 ####
+#### Schedule the post
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
