--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -35,8 +35,8 @@ title: May 4th, 2021
 #### Make mockup carousel
 #### Acquire all design assets
 #### Polish the carousel
-####
-#### Schedule the post
+#### Add some captions
+#### Schedule the posts
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
