--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -40,5 +40,6 @@ title: May 4th, 2021
 ## #capture | Taking code notes
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
-### That's why I'll make a personal projects that implement the lesson from every module
+### That's why I'll make a personal projects
+### Each implements a lesson from every module
 #
