Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -42,5 +42,5 @@ title: May 4th, 2021
 ### A notebook or repo on github
 ### That's why I'll make a personal projects
 ### Each implements a lesson from every module
-##
+## #reflect |
 #
