Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -43,5 +43,6 @@ title: May 4th, 2021
 ### That's why I'll make a personal projects
 ### Each implements a lesson from every module
 ## #reflect | Three wishes I want
+### Access to environment with like minded people
 ###
 #
