Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -44,6 +44,6 @@ title: May 4th, 2021
 ### Each implements a lesson from every module
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
-### Live in open environment for personal growth
+### Live in open an environment for personal growth
 ### Organization that
 #
