--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -45,5 +45,6 @@ title: May 4th, 2021
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
 ### Live in open an environment for personal growth
-### Organization that
+### Start an organization that encourages living the best version of yourself
+####
 #
