Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -44,7 +44,7 @@ title: May 4th, 2021
 ### Each implements a lesson from every module
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
-####
+#### I feel inspired and
 ### Live in open an environment for personal growth
 ####
 ### Start an organization that encourages living the best version of yourself
