Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -46,7 +46,7 @@ title: May 4th, 2021
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my thoughts validated
-####
+#### Learning my shortcomings when my ideas get challenged in a constructive manner
 ### Live in open an environment for personal growth
 ####
 ### Start an organization that encourages living the best version of yourself
