--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -45,11 +45,10 @@ title: May 4th, 2021
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
-#### Having my projects and ideas validated
+#### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
-####
 ### Live in open an environment for personal growth
-####
+#### A park, cafe or other location that has
 ### Start an organization that encourages living the best version of yourself
 ####
 #
