--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -48,7 +48,9 @@ title: May 4th, 2021
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
 ### Live in open an environment for personal growth
-#### A park, cafe or other location that has
+#### A park, cafe or other location that gives me space to enter my creative flow
+#### My job requires me to be creative which isn't as easy as 1+1
+####
 ### Start an organization that encourages living the best version of yourself
 ####
 #
