Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -48,8 +48,9 @@ title: May 4th, 2021
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
 ### Live in open an environment for personal growth
-#### My job requires me to be creative which isn't as easy as 1+1
-#### A park, cafe or other location that gives me space to enter my creative flow
+#### A park, cafe
+##### location that gives me space to enter my creative flow
+##### A place to reflect on my day or personal
 ####
 ### Start an organization that encourages living the best version of yourself
 ####
