Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -50,7 +50,7 @@ title: May 4th, 2021
 ### Live in open an environment for personal growth
 #### A park, cafe
 ##### location that gives me space to enter my creative flow
-##### A place to reflect on my day or personal
+##### A place to reflect on my day or goals
 ####
 ### Start an organization that encourages living the best version of yourself
 ####
