--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -50,6 +50,7 @@ title: May 4th, 2021
 ### Live in open an environment for personal growth
 #### A park, cafe
 ##### location that gives me space to enter my creative flow
+##### Have online meetings with clients
 ##### A place to reflect on my day or goals
 ####
 ### Start an organization that encourages living the best version of yourself
