Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -48,11 +48,15 @@ title: May 4th, 2021
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
 ### Live in open an environment for personal growth
-#### A park, cafe
+#### A cafe, coworking
 ##### location that gives me space to enter my creative flow
 ##### Have online meetings with clients
 ##### A place to reflect on my day or goals
-####
+#### Events, conventions
+##### Meet with like minded people
+##### Meet with individuals who are smarter (Elon, Gary)
+#### Beach, forest, park
+#####
 ### Start an organization that encourages living the best version of yourself
 ####
 #
