Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -54,7 +54,8 @@ title: May 4th, 2021
 #### Events, conventions
 ##### Meet with like minded people
 ##### Meet with individuals who are smarter (Elon, Gary)
-#### Beach, forest, park
+#### Beach, forest, park, spa
+##### Relaxing atmosphere to wash away my worries
 ##### A place to reflect on my day or goals
 #####
 ### Start an organization that encourages living the best version of yourself
