Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -51,13 +51,13 @@ title: May 4th, 2021
 #### A cafe, coworking
 ##### location that gives me space to enter my creative flow
 ##### Have online meetings with clients
-#### Events, conventions
+#### Events, workshops, conventions
 ##### Meet with like minded people
 ##### Meet with individuals who are smarter (Elon, Gary)
 #### Beach, forest, park, spa
 ##### Relaxing atmosphere to wash away my worries
 ##### A place to reflect on my day or goals
-#####
+##### Have fun
 ### Start an organization that encourages living the best version of yourself
 ####
 #
