Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -60,5 +60,8 @@ title: May 4th, 2021
 ##### A place to reflect on my day or goals
 ##### Have fun
 ### Start an organization that encourages living the best version of yourself
-#### Innovative
+#### Innovative apps
+##### Interactive apps that muslims in their daily tasks
+###### To-do app with optional to choose Salah time
+######
 #
