Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -62,5 +62,6 @@ title: May 4th, 2021
 ### Start an organization that encourages living the best version of yourself
 ##### Interactive apps that Muslims use in their daily lives
 ###### To-do app with optional to choose Salah time
+###### Quran & Hadith research app for muslim scholars and students of knowledge
 ######
 #
