--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -63,5 +63,5 @@ title: May 4th, 2021
 ##### Interactive apps that Muslims use in their daily lives
 ###### To-do app with optional to choose Salah time
 ###### Quran & Hadith research app for muslim scholars and students of knowledge
-######
+###### Platform to help muslims learn islamic knoweldge in a
 #
