Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -42,6 +42,8 @@ title: May 4th, 2021
 ### A notebook or repo on github
 ### That's why I'll make a personal projects
 ### Each implements a lesson from every module
+## Earn points until you reach a point where you can join premium level groups #capture #[[app idea]]
+###
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
@@ -63,5 +65,5 @@ title: May 4th, 2021
 ##### Interactive apps that Muslims use in their daily lives
 ###### To-do app with optional to choose Salah time
 ###### Quran & Hadith research app for muslim scholars and students of knowledge
-###### Platform to help muslims learn islamic knoweldge in a
+###### Platform to help Muslims learn Islamic knowledge in a
 #
