--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -42,7 +42,8 @@ title: May 4th, 2021
 ### A notebook or repo on github
 ### That's why I'll make a personal projects
 ### Each implements a lesson from every module
-## Earn points until you reach a point where you can join premium level groups #capture #[[app idea]]
+## Earn points until you reach a point where you can join premium level groups 
+#capture #[[app idea]]
 ###
 ## #reflect | Three wishes I want
 ### Access to like minded English speaking people
