Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -66,5 +66,6 @@ title: May 4th, 2021
 ##### Interactive apps that Muslims use in their daily lives
 ###### To-do app with optional to choose Salah time
 ###### Quran & Hadith research app for muslim scholars and students of knowledge
-###### Platform to help Muslims learn Islamic knowledge in a
+###### Platform to help Muslims learn Islamic knowledge in a group setting 
+(cohort system)
 #
