Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -65,7 +65,7 @@ title: May 4th, 2021
 ### Start an organization that encourages living the best version of yourself
 ##### Interactive apps that Muslims use in their daily lives
 ###### To-do app with optional to choose Salah time
-###### Quran & Hadith research app for muslim scholars and students of knowledge
+###### Quran & Hadith note taking research app for Muslim scholars and students
 ###### Platform to help Muslims learn Islamic knowledge in a group setting 
 (cohort system)
 ######
