--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -67,6 +67,6 @@ title: May 4th, 2021
 ###### To-do app with optional to choose Salah time
 ###### Quran & Hadith note taking research app for Muslim scholars and students
 ###### Platform to help Muslims learn Islamic knowledge in a group setting 
-(cohort system)
+(cohort system?)
 ######
 #
