Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -50,4 +50,24 @@ title: May 4th, 2021
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
+## Three wishes
+### Live in open an environment for personal growth
+#### A cafe, coworking
+##### location that gives me space to enter my creative flow
+##### Have online meetings with clients
+#### Events, workshops, conventions, offline courses
+##### Meet with like minded people
+##### Meet with individuals who are smarter (Elon, Gary)
+##### Learn new things in a memorable manner
+#### Beach, forest, park, spa
+##### Relaxing atmosphere to wash away my worries
+##### A place to reflect on my day or goals
+##### Have fun
+### Start an organization that encourages living the best version of yourself
+##### Interactive apps that Muslims use in their daily lives
+###### To-do app with optional to choose Salah time
+###### Quran & Hadith note taking research app for Muslim scholars and students
+###### Platform to help Muslims learn Islamic knowledge in a group setting 
+(cohort system?)
+##### Next level educational
 #
