--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -50,6 +50,8 @@ title: May 4th, 2021
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
+### Live in open an environment for personal growth
+####
 ## Three wishes
 ### Live in open an environment for personal growth
 #### A cafe, coworking
