--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -37,7 +37,8 @@ title: May 4th, 2021
 #### Polish the carousel
 #### Add some captions
 #### Schedule the posts
-## #capture | Taking code notes
+## Taking code notes 
+#capture
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
 ### That's why I'll make a personal projects
@@ -45,14 +46,14 @@ title: May 4th, 2021
 ## Earn points until you reach a point where you can join premium level groups 
 #capture #[[app idea]]
 ###
-## #reflect | Three wishes I want
+## Three wishes I want #reflect
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my projects and ideas validated motivates my creative mind
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
 ### Live in open an environment for personal growth
 ####
-## Three wishes
+## Three wishes #reflect
 ### Live in open an environment for personal growth
 #### A cafe, coworking
 ##### location that gives me space to enter my creative flow
