--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -46,7 +46,8 @@ title: May 4th, 2021
 ## Earn points until you reach a point where you can join premium level groups 
 #capture #[[app idea]]
 ###
-## Three wishes I want #reflect
+## Three wishes I want 
+#reflect
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my projects and ideas validated motivates my creative mind
