Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -54,7 +54,11 @@ title: May 4th, 2021
 #### Learning my shortcomings when I get constructive criticisms from more experienced individuals
 ### Live in open an environment for personal growth
 #### Feeling of freedom to focus on my values
-####
+#### Distraction free, thus easier to focus
+#### I feel in peace when I can shut my brain and just be in the moment
+#### Not being in rush
+### Start an organization that encourages living the best version of yourself
+#### I
 ## Three wishes #reflect
 ### Live in open an environment for personal growth
 #### A cafe, coworking
