Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -58,7 +58,8 @@ title: May 4th, 2021
 #### I feel in peace when I can shut my brain and just be in the moment
 #### Not being in rush
 ### Start an organization that encourages living the best version of yourself
-#### I feel
+#### I feel motivated when I can change somebodies life for the better'
+####
 ## Three wishes #reflect
 ### Live in open an environment for personal growth
 #### A cafe, coworking
