Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -59,6 +59,7 @@ title: May 4th, 2021
 #### Not being in rush
 ### Start an organization that encourages living the best version of yourself
 #### I feel motivated when I can change somebodies life for the better'
+#### I feel being part of the community when working with a team towards a common goal
 ####
 ## Three wishes #reflect
 ### Live in open an environment for personal growth
