--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -79,5 +79,6 @@ title: May 4th, 2021
 ###### Quran & Hadith note taking research app for Muslim scholars and students
 ###### Platform to help Muslims learn Islamic knowledge in a group setting 
 (cohort system?)
-##### Next level educational
+##### Next level educational content
+######
 #
