Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -80,5 +80,5 @@ title: May 4th, 2021
 ###### Platform to help Muslims learn Islamic knowledge in a group setting 
 (cohort system?)
 ##### Next level educational content
-######
+###### Breaking complex concepts
 #
