--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -81,5 +81,5 @@ title: May 4th, 2021
 (cohort system?)
 ##### Next level educational content
 ###### Breaking complex concepts into simple ones for a laymen person
-######
+###### Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
 #
