Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -37,8 +37,7 @@ title: May 4th, 2021
 #### Polish the carousel
 #### Add some captions
 #### Schedule the posts
-## Taking code notes 
-#capture
+## Taking code notes #capture
 ### It's better to make a simple project on one lesson at a time
 ### A notebook or repo on github
 ### That's why I'll make a personal projects
@@ -46,8 +45,7 @@ title: May 4th, 2021
 ## Earn points until you reach a point where you can join premium level groups 
 #capture #[[app idea]]
 ###
-## Three wishes I want 
-#reflect
+## Three wishes I want #reflect
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
 #### Having my projects and ideas validated motivates my creative mind
