--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -1,6 +1,8 @@
 ---
 title: May 4th, 2021
 ---
+## Breaking down my tasks
+ Micard atomic steps
 #### Open vscodium
 #### Open inline terminal
 #### Start Flutter emulator
