Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -44,7 +44,10 @@ title: May 4th, 2021
 ### Each implements a lesson from every module
 ## Earn points until you reach a point to can join premium level groups 
 #capture #[[app idea]]
-###
+### If Mentorship was totally free online than It'll make it harder to dedicate time to every one
+### We may note help those who are serious about the deen
+### compared to those who don't need the direct contact
+### **This topic need for research**
 ## Three wishes I want #reflect
 ### Access to like minded English speaking people
 #### I feel inspired and understood when talking with those who share the same values and interests as I am.
