--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -83,3 +83,5 @@ title: May 4th, 2021
 ##### Next level educational content
 ###### Breaking complex concepts into simple ones for a laymen person
 ###### Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
+## Wait what ARE my rpinciple values?
+###
