Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -90,4 +90,7 @@ title: May 4th, 2021
 ### After work
 ### during OBED
 ### Before waking up if 6:30
-##
+## What I do
+### My agency
+### My web dev skills
+###
