Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -91,6 +91,6 @@ title: May 4th, 2021
 ### during OBED
 ### Before waking up if 6:30
 ## What I do
-### My agency
-### My web dev skills
+### story agency
+### web dev skills
 ###
