Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -5,4 +5,4 @@ title: May 5th, 2021
 ## Be consistent
 ### why though?
 ### People know what to expect
-### Comsistent content makesnit clear what you
+### Comsistent content makes it clear what you
