Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -2,7 +2,7 @@
 title: May 5th, 2021
 ---
 
-## Be consistent
+## Make Consistent content
 ### why though?
 ### People know what to expect
-### makes it clear what valie you provide
+### It makes it clear what value you provide
