Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -6,3 +6,5 @@ title: May 5th, 2021
 ### why though?
 ### People know what to expect
 ### It makes it clear what value you provide
+### In comparison
+###
