--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -7,4 +7,4 @@ title: May 5th, 2021
 ### People know what to expect
 ### It makes it clear what value you provide
 ### In comparison
-### Inconsistent messu
+### Inconsistent messy content timeline
