--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -8,4 +8,4 @@ title: May 5th, 2021
 ### It makes it clear what value you provide
 ### In comparison
 ### Inconsistent messy timeline is confusing
-###
+### They don't know what to expect
