--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -9,4 +9,5 @@ title: May 5th, 2021
 ### In comparison
 ### Inconsistent messy timeline is confusing
 ### They don't know what to expect
-##
+## don't worry over the competition
+###
