Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -10,4 +10,5 @@ title: May 5th, 2021
 ### Inconsistent messy timeline is confusing
 ### They don't know what to expect
 ## don't worry over the competition
+### You serve a different audience
 ###
