--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -3,13 +3,13 @@ title: May 5th, 2021
 ---
 
 ##
-## Make Consistent content
+## Make Consistent content #capture
 ### why though?
 ### People know what to expect
 ### It makes it clear what value you provide
 ### In comparison
 ### Inconsistent messy timeline is confusing
 ### They don't know what to expect
-## don't worry over the competition
+## don't worry over the competition #capture
 ### You serve a different audience
 ###
