--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -12,4 +12,5 @@ title: May 5th, 2021
 ### They don't know what to expect
 ## don't worry over the competition #capture
 ### You serve a different audience
-##
+## You need a strategy
+###
