Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -13,4 +13,4 @@ title: May 5th, 2021
 ## don't worry over the competition #capture
 ### You serve a different audience
 ## You need a strategy
-### Doing things
+### Doing things on whim or waiting when you get inspiration leads to
