Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -14,4 +14,4 @@ title: May 5th, 2021
 ### You serve a different audience
 ## You need a strategy
 ### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
-###
+### Having boundries and a system shields you from
