Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -15,4 +15,5 @@ title: May 5th, 2021
 ## You need a strategy
 ### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
 ### Having boundries and a system shields you from chaos
-### Protecting what makes you unique and
+### Protecting what makes you unique from the sea of noise
+###
