Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -16,4 +16,5 @@ title: May 5th, 2021
 ### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
 ### Having boundries and a system shields you from chaos
 ### Protecting what makes you unique from the sea of noise
-###
+### This making uou stand out from others
+####
