Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -17,4 +17,4 @@ title: May 5th, 2021
 ### Having boundries and a system shields you from chaos
 ### Protecting what makes you unique from the sea of noise
 ### This making uou stand out from others
-## Know thyself and know thy enemy
+## Know thyself and know thy -enemy- self
