Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -19,4 +19,6 @@ title: May 5th, 2021
 ### This making uou stand out from others
 ## Know thyself and know thy -enemy- audience
 ### Your audience percieves things differently
+### Some brands suit some audience better than others
+### Every brand helps a specific audience
 ###
