Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -21,4 +21,5 @@ title: May 5th, 2021
 ### Your audience percieves things differently
 ### Some brands suit some audience better than others
 ### Every brand helps a specific audience
-###
+### Be different by knowing your audience
+##
