Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -3,23 +3,23 @@ title: May 5th, 2021
 ---
 
 ##
-## Make Consistent content #capture
-### why though?
-### People know what to expect
-### It makes it clear what value you provide
-### In comparison
-### Inconsistent messy timeline is confusing
-### They don't know what to expect
-## don't worry over the competition #capture
-### You serve a different audience
-## You need a strategy
-### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
-### Having boundries and a system shields you from chaos
-### Protecting what makes you unique from the sea of noise
-### This making uou stand out from others
-## Know thyself and know thy -enemy- audience
-### Your audience percieves things differently
-### Some brands suit some audience better than others
-### Every brand helps a specific audience
-### Be different by knowing your audience
+### Make Consistent content #capture
+#### why though?
+#### People know what to expect
+#### It makes it clear what value you provide
+#### In comparison
+#### Inconsistent messy timeline is confusing
+#### They don't know what to expect
+### don't worry over the competition #capture
+#### You serve a different audience
+### You need a strategy
+#### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
+#### Having boundries and a system shields you from chaos
+#### Protecting what makes you unique from the sea of noise
+#### This making uou stand out from others
+### Know thyself and know thy -enemy- audience
+#### Your audience percieves things differently
+#### Some brands suit some audience better than others
+#### Every brand helps a specific audience
+#### Be different by knowing your audience
 ##
