Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -12,7 +12,7 @@ title: May 5th, 2021
 #### They don't know what to expect
 ### don't worry over the competition #capture
 #### You serve a different audience
-### You need a strategy
+### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audoence
 #### Having boundries and a system shields you from chaos
 #### Protecting what makes you unique from the sea of noise
