Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -21,5 +21,8 @@ content ideas #[[insta content]]
 #### Your audience percieves things differently
 #### Some brands suit some audience better than others
 #### Every brand helps a specific audience
-#### Be different by knowing your audience
+#### Be di
+## 3 persuits
+###
+rent by knowing your audience
 ##
