Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -23,6 +23,7 @@ content ideas #[[insta content]]
 #### Every brand helps a specific audience
 #### Be di
 ## 3 persuits
+### Barakah Lifestyle
 ###
 rent by knowing your audience
 ##
