--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -24,6 +24,6 @@ content ideas #[[insta content]]
 #### Be di
 ## 3 persuits
 ### Barakah Lifestyle
-###
+### Thought leader in Storytelling agency
 rent by knowing your audience
 ##
