--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -25,6 +25,6 @@ content ideas #[[insta content]]
 ## 3 persuits
 ### Barakah Lifestyle
 ### Storytelling Agency
-###
+### Solution Engineer
 rent by knowing your audience
 ##
