Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -21,7 +21,7 @@ content ideas #[[insta content]]
 #### Your audience percieves things differently
 #### Some brands suit some audience better than others
 #### Every brand helps a specific audience
-#### Be di
+#### Be dirent by knowing your audience
 ## 3 persuits
 ### Barakah Lifestyle
 ####
@@ -29,5 +29,4 @@ content ideas #[[insta content]]
 ####
 ### Storytelling Agency
 ####
-rent by knowing your audience
 ##
