Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -1,8 +1,7 @@
 ---
 title: May 5th, 2021
 ---
-
-content ideas #[[insta content]]
+## content ideas #[[insta content]]
 ### Make Consistent content #capture
 #### why though?
 #### People know what to expect
