Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -20,7 +20,7 @@ title: May 5th, 2021
 #### Your audience percieves things differently
 #### Some brands suit some audience better than others
 #### Every brand helps a specific audience
-#### Be dirent by knowing your audience
+#### Be different by knowing your audience
 ## 3 persuits
 ### Barakah Lifestyle
 ####
