Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -29,4 +29,6 @@ title: May 5th, 2021
 ### Storytelling Agency
 ####
 ## 3 wishes
+### Achieve a Barakah lifestyle
+### Build the salah to-do app
 ###
