--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -31,4 +31,4 @@ title: May 5th, 2021
 ## 3 wishes
 ### Achieve a Barakah lifestyle
 ### Build the salah to-do app
-### Close 1 client with satisfactory results
+### Close a client with satisfactory results
