Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -24,7 +24,7 @@ title: May 5th, 2021
 ## 3 persuits
 ### Barakah Lifestyle
 ####
-### Solution Engineering
+### Engineering innovative solutions
 ####
 ### Storytelling Agency
 ####
