--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -30,6 +30,7 @@ title: May 5th, 2021
 ####
 ## 3 wishes
 ### Achieve a Barakah lifestyle
+#### Do my fard salah
 ####
 ### Build the salah to-do app
 ####
