--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -31,7 +31,8 @@ title: May 5th, 2021
 ## 3 wishes
 ### Achieve a Barakah lifestyle
 #### Do my fard salah
-####
+#### Capture lessons from reminders
+#### Convert into actionable
 ### Build the salah to-do app
 ####
 ### Close a client with satisfactory results
