Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -32,7 +32,8 @@ title: May 5th, 2021
 ### Achieve a Barakah lifestyle
 #### Do my fard salah
 #### Capture lessons from reminders
-#### Convert into actionable
+#### Convert into actionable steps
+####
 ### Build the salah to-do app
 ####
 ### Close a client with satisfactory results
