Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -33,8 +33,8 @@ title: May 5th, 2021
 #### Do my fard salah
 #### Capture lessons from reminders
 #### Convert into actionable steps
-####
 ### Build the salah to-do app
-####
+#### Go along the flutter bootcamp
+#### re-implement lessons with personal projects
 ### Close a client with satisfactory results
 ####
