Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -37,4 +37,7 @@ title: May 5th, 2021
 #### Go along the flutter bootcamp
 #### re-implement lessons with personal projects
 ### Close a client with satisfactory results
+#### Build side-projects as proof
+#### Implement strategies there
+#### Than create a case study
 ####
