--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -11,6 +11,8 @@ title: May 5th, 2021
 #### They don't know what to expect
 ### don't worry over the competition #capture
 #### You serve a different audience
+#### Use the blue ocean strategy
+#### By
 ### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
 #### Having boundries and a system shields you from chaos
