Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -12,7 +12,8 @@ title: May 5th, 2021
 ### don't worry over the competition #capture
 #### You serve a different audience
 #### Use the blue ocean strategy
-#### By knowing the key
+#### By knowing the key values of your brand
+####
 ### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
 #### Having boundries and a system shields you from chaos
