Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -13,6 +13,7 @@ title: May 5th, 2021
 #### You serve a different audience
 #### Use the blue ocean strategy
 #### By knowing the key values of your brand
+#### You end with a powerfull combination
 ####
 ### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
