--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -14,7 +14,8 @@ title: May 5th, 2021
 #### Use the blue ocean strategy
 #### By knowing the key values of your brand
 #### You end with a powerfull combination
-####
+#### Setting you apart and
+#### Makong your
 ### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
 #### Having boundries and a system shields you from chaos
