Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -15,7 +15,7 @@ title: May 5th, 2021
 #### By knowing the key values of your brand
 #### You end with a powerfull combination
 #### Setting you apart and
-#### Makong your
+#### Making your competition irrelevant
 ### You need a strategy #capture
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
 #### Having boundries and a system shields you from chaos
