--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -35,7 +35,7 @@ title: May 5th, 2021
 ####
 ## 3 wishes
 ### Achieve a Barakah lifestyle
-#### Do my fard salah
+#### Absorb fard salah as my corr
 #### Capture lessons from reminders
 #### Convert into actionable steps
 ### Build the salah to-do app
