Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -35,13 +35,12 @@ title: May 5th, 2021
 ####
 ## 3 wishes
 ### Achieve a Barakah lifestyle
-#### Absorb fard salah as my corr
+#### Absorb fard salah as my core value
 #### Capture lessons from reminders
 #### Convert into actionable steps
 ### Build the salah to-do app
 #### Go along the flutter bootcamp
 #### re-implement lessons with personal projects
 ### Close a client with satisfactory results
-#### Build side-projects as proof
-#### Implement strategies there
-#### Than create a case study
+#### Grow mockup instagtam brands
+####
