Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -42,6 +42,6 @@ title: May 5th, 2021
 #### Go along the flutter bootcamp
 #### re-implement lessons with personal projects
 ### Close a client with satisfactory results
-#### Grow mockup instagtam brands
+#### Grow mockup instagram brands
 #### 1 month case study
 ####
