Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -43,5 +43,5 @@ title: May 5th, 2021
 #### re-implement lessons with personal projects
 ### Close a client with satisfactory results
 #### Grow mockup instagram brands
-#### 1 month case study
+#### 1 month for a case study
 ####
