Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -44,4 +44,5 @@ title: May 5th, 2021
 ### Close a client with satisfactory results
 #### Grow mockup instagram brands
 #### 1 month for a case study
+#### Send proposals on upwork
 ####
